--- a/inst/examples/pdfWorksheet.Rmd
+++ b/inst/examples/pdfWorksheet.Rmd
@@ -2,7 +2,7 @@
 title: "Worksheet"
 subtitle: "Course Name"
 author: "Ryan Raaum"
-output: rrmdstyle::html_worksheet
+output: rrmdstyle::pdf_worksheet
 ---
 
 # Heading 1
