try to fix preauthor spacing

--- a/inst/rmarkdown/templates/pdf/resources/pdf_template.tex
+++ b/inst/rmarkdown/templates/pdf/resources/pdf_template.tex
@@ -445,6 +445,7 @@ $endif$
 \usepackage{titling}
 \setlength{\droptitle}{-60pt}
 \posttitle{\par\end{center}}
+\preauthor{\begin{center} \large \begin{tabular}[t]{c}}
 
 % include logo at the top of first page
 $if(rrlogo)$
